src/test/resources/repos/invalid-binary-desc-subjects/647/45d/00f/64745d00f45dc5bc9389b429a323c55fea0c821194fd40941fe3f2eaf409d175/inventory.json.sha512
b6ac086071a4eea52bc93a03413fc2b969835c6e9d3fbd794cf7d9ab01d94a3c2329d972d4814ea1a195e90b457e49036bc0715fc94ebe55fff304692ea90f45  inventory.json
